Started work on remix port.

--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -5,6 +5,9 @@
   margin: 0.25rem;
   border: 1px solid var(--text-color);
   cursor: pointer;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1rem;
 }
 
 .button.primary {
