--- a/src/styles/_global.css
+++ b/src/styles/_global.css
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Inter", sans-serif;
+  font-family: sans-serif;
   background-color: var(--bg-color);
   color: var(--text-color);
 }
