--- a/src/styles/_global.css
+++ b/src/styles/_global.css
@@ -11,3 +11,12 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
 }
+
+ul,
+ol {
+  text-align: left;
+}
+
+li {
+  margin: 0 0 1rem;
+}
