--- a/src/components/Layout/styles.module.css
+++ b/src/components/Layout/styles.module.css
@@ -12,3 +12,9 @@
   text-decoration: none;
   text-transform: uppercase;
 }
+
+.credit {
+  font-size: 0.875rem;
+  color: var(--text-color);
+  margin: 1.5rem 0;
+}
