--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -1,5 +1,5 @@
 :root {
-  --grid-size: 75px;
+  --grid-size: calc(100vw / 8);
   --text-color: #000;
   --bg-color: #fff;
   --border-color: #ccc;
@@ -13,4 +13,10 @@
   --bg-color: #222;
   --border-color: #666;
   --accent-color: #add8e6;
+}
+
+@media screen and (min-width: 600px) {
+  :root {
+    --grid-size: 75px;
+  }
 }
